--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "newh5-cli",
   "version": "0.0.1",
   "description": "HTML5 boilerplate and build tool",
+  "author": "taoqianbao",
   "main": "index.js",
   "bin": {
     "newh5": "./bin/newh5.js"
@@ -30,10 +31,17 @@
     "url": "https://github.com/taoqianbao/tqb-h5-cli/issues"
   },
   "homepage": "https://github.com/taoqianbao/tqb-h5-cli#readme",
-  "devDependencies": {},
   "dependencies": {
     "commander": "^2.14.1"
   },
-  "author": "taoqianbao",
-  "license": "MIT"
+  "devDependencies": {
+    "commitizen": "^2.9.6",
+    "cz-conventional-changelog": "^2.1.0"
+  },
+  "license": "MIT",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
