init start command

--- a/package.json
+++ b/package.json
@@ -33,10 +33,45 @@
   },
   "homepage": "https://github.com/taoqianbao/tqb-h5-cli#readme",
   "dependencies": {
+    "autoprefixer": "^8.1.0",
     "axios": "^0.18.0",
+    "babel-core": "^6.26.0",
+    "chalk": "^2.3.2",
     "commander": "^2.14.1",
     "cross-spawn": "^6.0.5",
-    "ora": "^2.0.0"
+    "css-loader": "^0.28.10",
+    "exports-loader": "^0.7.0",
+    "file-loader": "^1.1.11",
+    "fs": "0.0.1-security",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.6",
+    "image-webpack-loader": "^4.1.0",
+    "ip": "^1.1.5",
+    "less": "^3.0.1",
+    "less-loader": "^4.0.6",
+    "lodash": "^4.17.5",
+    "node-sass": "^4.7.2",
+    "npm-install-webpack-plugin": "^4.0.5",
+    "ora": "^2.0.0",
+    "path": "^0.12.7",
+    "postcss": "^6.0.19",
+    "postcss-assets": "^5.0.0",
+    "postcss-loader": "^2.1.1",
+    "postcss-plugin-px2rem": "^0.7.0",
+    "postcss-sprites": "^4.2.1",
+    "qrcode-terminal": "^0.11.0",
+    "react-dev-utils": "^5.0.0",
+    "sass": "^1.0.0-beta.5.3",
+    "sass-loader": "^6.0.7",
+    "script-loader": "^0.7.2",
+    "style-loader": "^0.20.2",
+    "stylus-loader": "^3.0.2",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.1.0",
+    "webpack-dev-server": "^3.1.0",
+    "webpack-merge": "^4.1.2",
+    "webpack-visualizer-plugin": "^0.1.11",
+    "zepto": "^1.2.0"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
