--- a/package.json
+++ b/package.json
@@ -40,12 +40,15 @@
     "commander": "^2.14.1",
     "cross-spawn": "^6.0.5",
     "css-loader": "^0.28.10",
+    "download-git-repo": "^1.0.2",
     "exports-loader": "^0.7.0",
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
+    "fs-extra": "^5.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
     "image-webpack-loader": "^4.1.0",
+    "inquirer": "^5.1.0",
     "ip": "^1.1.5",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
