--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/taoqianbao/tqb-h5-cli#readme",
   "dependencies": {
+    "archiver": "^2.1.1",
     "autoprefixer": "^8.1.0",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
@@ -42,6 +43,7 @@
     "css-loader": "^0.28.10",
     "download-git-repo": "^1.0.2",
     "exports-loader": "^0.7.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
     "fs-extra": "^5.0.0",
