--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newh5-cli",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "HTML5 boilerplate and build tool",
   "author": "taoqianbao",
   "main": "index.js",
@@ -37,6 +37,12 @@
     "autoprefixer": "^8.1.0",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "chalk": "^2.3.2",
     "commander": "^2.14.1",
     "cross-spawn": "^6.0.5",
@@ -79,8 +85,6 @@
     "zepto": "^1.2.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.1.0"
   },
