--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,18 @@
 {
     "plugins": [
+        [
+            "transform-runtime",
+            {
+                "helpers": true,
+                "polyfill": true,
+                "regenerator": true,
+                "moduleName": "babel-runtime"
+            }
+        ],
         "transform-async-to-generator"
     ],
     "presets": [
-        [
-            "env",
-            {
-                "targets": {
-                    "node": "current"
-                }
-            }
-        ]
+        "env",
+        "react"
     ]
 }
