--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "author": "taoqianbao",
   "main": "index.js",
   "bin": {
-    "newh5": "./bin/newh5.js"
+    "newh5": "./bin/index.js"
   },
   "engines": {
     "node": ">=6"
   },
   "scripts": {
+    "build": "babel src --out-dir bin --ignore test.js",
+    "prepublish": "npm run build",
     "commit": "git-cz",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "babel-node src/index.js"
   },
   "repository": {
     "type": "git",
