--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "archiver": "^2.1.1",
     "autoprefixer": "^8.1.0",
     "axios": "^0.18.0",
-    "babel-core": "^6.26.0",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
@@ -55,6 +55,7 @@
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
     "fs-extra": "^5.0.0",
+    "git-repository": "^0.1.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
     "image-webpack-loader": "^4.1.0",
